--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root{
     --primary-color: #1d5888;
-    --secondary-color: #ff993b;
+    --secondary-color: #737373;
     --dark-color: #292929;
     --white-color: #dff3e4;
 }
